manifests/09_network-policy-allow-ingress-to-operator-metrics-range.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
 name: allow-ingress-to-operator-metrics-range
 namespace: openshift-cluster-csi-drivers
 annotations:
  include.release.openshift.io/hypershift: "true"
  include.release.openshift.io/ibm-cloud-managed: "true"
  include.release.openshift.io/self-managed-high-availability: "true"
  include.release.openshift.io/single-node-developer: "true"
  capability.openshift.io/name: Storage
spec:
 podSelector:
   matchLabels:
     openshift.storage.network-policy.operator-metrics-range: allow
 ingress:
 - ports:
   - protocol: TCP
     port: 8443
     endPort: 8445
 policyTypes:
 - Ingress
